[gd_scene load_steps=6 format=3 uid="uid://dwewqj41wq8uf"]

[ext_resource type="Script" path="res://scripts/audio_manager.gd" id="1_8qd8g"]
[ext_resource type="AudioStream" uid="uid://djf63mbh4v5of" path="res://assets/audio/tower_place.wav" id="2_3asnw"]
[ext_resource type="AudioStream" uid="uid://cfkljic87grob" path="res://assets/audio/tower_shoot.wav" id="2_liach"]
[ext_resource type="AudioStream" uid="uid://txe81rba6n8y" path="res://assets/audio/enemy_attack.wav" id="2_m6ggh"]
[ext_resource type="AudioStream" uid="uid://b043q2vdxa1gt" path="res://assets/audio/button_on_click.wav" id="3_aoitu"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_8qd8g")

[node name="EnemyAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_m6ggh")

[node name="EnemyDie" type="AudioStreamPlayer" parent="."]

[node name="EnemyMove" type="AudioStreamPlayer" parent="."]

[node name="BackgroundGame" type="AudioStreamPlayer" parent="."]

[node name="BackgroundMenu" type="AudioStreamPlayer" parent="."]

[node name="ButtonOnClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_aoitu")

[node name="TowerPlace" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3asnw")

[node name="TowerShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_liach")
volume_db = -20.0
